substr et substring

--- a/src/start.html
+++ b/src/start.html
@@ -3,8 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Starting JS</title>
+
+
 </head>
 <body>
 
+<h1> Hello Javascript</h1>
+
+<p> You are so nice !</p>
+
 </body>
+
+<script type="text/javascript" src="http://underscorejs.org/underscore.js">
+</script>
+
+<script type="text/javascript">
+    var array = [2, 4, 6, 8, 10, 11, 0, -3];
+    var group = _.groupBy(array, function (num) {
+        return num % 2
+    });
+    console.log(group);
+    console.log(_.max(array));
+</script>
+
+
+<script type="text/javascript">
+    var x=Number(prompt("Entrez un nombre positif :"));
+    var result=1;
+  function factoriel(x){
+    for(var i=1;i<=x;i++){
+        result=result*i;}
+    return result;
+   };
+    console.log('le factoriel de '+x+' est '+factoriel(x));
+</script>
+
 </html>
