--- a/src/start.html
+++ b/src/start.html
@@ -6,5 +6,37 @@
 </head>
 <body>
 
+<h1>hello javascript</h1>
+<p>you are so nice!</p>
+<p> </p>
 </body>
+
+<script type="text/javascript" src="http://underscorejs.org/underscore.js">
+</script>
+
+<script type="text/javascript">
+    alert("hello javascript");
+</script>
+
+<script type="text/javascript">
+    var array = [2, 4, 6, 8, 10, 11, 0, -3];
+    var group = _.groupBy(array, function (num) {
+        return num % 2
+    });
+    console.log(group);
+    console.log(_.max(array));
+</script>
+<script type="text/javascript">
+function factoriel(x) {
+;
+    var result = 1;
+
+    for (var i = 1; i < x + 1; i++) {
+        result *= i;
+    }
+    return result;
+}
+console.log(factoriel(5));
+
+</script>
 </html>
